--- a/components/layout/MainNavigation.module.css
+++ b/components/layout/MainNavigation.module.css
@@ -1,22 +1,47 @@
 .header {
   width: 100%;
-  height: 5rem;
+  /* height: 5rem; */
+  height: 12vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  /* justify-content: space-around; */
   background-color: #f8f6f2;
   color: #2d2d2d;
-  padding: 0 10%;
+  padding: 0 2.5%;
 
   /* top: 0;
     left: 0;
     position: fixed; */
+
+  /* background-color: turquoise; */
 }
 
 .logo {
+  width: 20%;
+  height: 100%;
   font-size: 2rem;
   color: white;
   font-weight: bold;
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+
+  /* background-color: violet; */
+}
+
+.logo img {
+  margin-left: 2rem;
+  height: 100%;
+}
+
+.header nav {
+  width: 80%;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .header ul {
@@ -25,20 +50,46 @@
   padding: 0;
   display: flex;
   align-items: baseline;
+
+  /* background-color: yellow; */
 }
 
 .header li {
-  margin-left: 3rem;
+  font-size: 1.6rem;
+  text-transform: uppercase;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.header a {
-  text-decoration: none;
-  font-size: 1.5rem;
-  color: #fcb8d2;
+.header .pages {
+  width: 70%;
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+
+  /* background-color: tomato; */
 }
 
-.header a:hover,
-.header a:active,
-.header a.active {
-  color: white;
+.header .pages li {
+  margin: 0 2rem;
+}
+
+.header .social-networks {
+  width: 30%;
+
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.header .social-networks li {
+  margin-right: 2rem;
+}
+
+.header .social-networks img {
+  width: 2rem;
+  justify-self: flex-end;
 }
