--- a/components/main/MainHeader.module.css
+++ b/components/main/MainHeader.module.css
@@ -2,7 +2,8 @@
   /* width: 100vw; */
   color: #fff;
   text-transform: uppercase;
-  padding-left: 8rem;
+  /* padding-left: 8rem; */
+  padding-left: 6%;
 
   /* height: 88vh; */
   height: 100vh;
@@ -11,30 +12,27 @@
   background-image: url("../../public/static/images/Mezcal_Ancestral_Botellas_4.png");
   background-repeat: no-repeat; /* Do not repeat the image */
   background-position: right bottom; /* Center the image */
-  /* background-position: right bottom;  */
-  /* background-position: right; */
-
   background-size: cover;
 }
 
 .main-header h2 {
-  font-size: 4rem;
+  width: 40rem;
+
+  font-size: var(--fs-title);
   font-weight: 600;
   line-height: 6rem;
   letter-spacing: 0.1rem;
 
-  padding-top: 6rem;
-
-  width: 40rem;
+  padding-top: 10%;
 }
 
 .main-header h3 {
-  font-size: 3rem;
+  font-size: var(--fs-sub-sub-title);
   font-weight: 500;
   line-height: 3.8rem;
   letter-spacing: 0.1rem;
 
-  padding-top: 2rem;
+  padding-top: 2%;
 
   width: 35rem;
 }
