--- a/components/main/MainSpecialCollections.module.css
+++ b/components/main/MainSpecialCollections.module.css
@@ -6,29 +6,31 @@
   justify-content: center;
   align-items: center;
 
-  background-color: #f8f6f2;
+  background-color: var(--main-bg-color);
 }
 
 .section-special-collections .left {
   width: 40%;
   height: 100%;
+  padding-left: 8%;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  padding-left: 10rem;
 
   /* background-color: violet; */
 }
 
 .section-special-collections .left h2 {
-  font-size: 3rem;
-  width: 80%;
+  width: 100%;
+  font-size: var(--fs-sub-sub-title);
+  font-weight: 500;
 }
 
 .section-special-collections .left button {
-  color: #2d2d2d;
+  font-family: Lora;
+  color: var(--black-color);
   width: 12rem;
 
   margin-top: 3rem;
@@ -37,8 +39,15 @@
   border-radius: 1.2rem;
   background-color: transparent;
   cursor: pointer;
+  border: 2px solid var(--black-color);
 
   transition: all 0.3s ease-out;
+}
+
+.section-special-collections .left button:hover {
+  color: var(--main-bg-color);
+  background-color: var(--black-color);
+  border: 2px solid var(--black-color);
 }
 
 .section-special-collections .right {
@@ -56,5 +65,4 @@
 .section-special-collections .right img {
   height: 100%;
   border-radius: 1.2rem;
-  /* width: 100%; */
 }
