--- a/components/layout/Footer.module.css
+++ b/components/layout/Footer.module.css
@@ -12,6 +12,7 @@
   align-items: flex-start;
   gap: 1rem;
 
+  border-top: 1px solid var(--main-brown-color);
   background-color: var(--main-bg-color);
   /* background-color: yellowgreen; */
 }
