--- a/components/family/FamillyBottlePrev.module.css
+++ b/components/family/FamillyBottlePrev.module.css
@@ -2,7 +2,6 @@
   height: 88vh;
   padding: 0 10%;
 
-  border: 2px solid black;
   background-color: white;
 
   display: flex;
@@ -47,12 +46,25 @@
   /* width: 12rem; */
   width: 80%;
   height: 0.2rem;
-  background-color: var(--arroqueno-color);
+  /* background-color: var(--arroqueno-color); */
 
   position: absolute;
   bottom: -30%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.bottle-prev .container-text h2.espadin::after {
+  background-color: var(--espadin-color);
+}
+.bottle-prev .container-text h2.arroqueno::after {
+  background-color: var(--arroqueno-color);
+}
+.bottle-prev .container-text h2.cuixe::after {
+  background-color: var(--cuixe-color);
+}
+.bottle-prev .container-text h2.tobala::after {
+  background-color: var(--tobala-color);
 }
 
 .bottle-prev .container-text h3 {
@@ -76,10 +88,45 @@
   padding: 1rem 1.5rem;
   border-radius: 1.2rem;
   background-color: transparent;
-  border: 2px solid var(--arroqueno-color);
+  /* background-color: yellowgreen; */
+  /* border: 2px solid var(--arroqueno-color); */
   cursor: pointer;
 
   transition: all 0.3s ease-out;
+}
+
+.bottle-prev .container-text button.espadin {
+  border: 2px solid var(--espadin-color);
+}
+.bottle-prev .container-text button.arroqueno {
+  border: 2px solid var(--arroqueno-color);
+}
+.bottle-prev .container-text button.cuixe {
+  border: 2px solid var(--cuixe-color);
+}
+.bottle-prev .container-text button.tobala {
+  border: 2px solid var(--tobala-color);
+}
+
+.bottle-prev .container-text button.espadin:hover {
+  color: #fff;
+  background-color: var(--espadin-color);
+  border: 2px solid transparent;
+}
+.bottle-prev .container-text button.arroqueno:hover {
+  color: #fff;
+  background-color: var(--arroqueno-color);
+  border: 2px solid transparent;
+}
+.bottle-prev .container-text button.cuixe:hover {
+  color: #fff;
+  background-color: var(--cuixe-color);
+  border: 2px solid transparent;
+}
+.bottle-prev .container-text button.tobala:hover {
+  color: #fff;
+  background-color: var(--tobala-color);
+  border: 2px solid transparent;
 }
 
 .bottle-prev .container-img {
@@ -94,6 +141,6 @@
 }
 
 .bottle-prev .container-img img {
-  height: 90%;
+  height: 85%;
   filter: drop-shadow(0px 40px 60px rgba(0, 0, 0, 0.15));
 }
