--- a/components/contact/ContactForm.module.css
+++ b/components/contact/ContactForm.module.css
@@ -31,8 +31,14 @@
 
 .form-control {
   margin: 2rem 0;
-  width: 75%;
-  height: 11%;
+  width: 80%;
+  height: 13%;
+
+  /* background-color: yellowgreen; */
+}
+
+.form-control--msg {
+  height: 13%;
 }
 
 .form-control input,
@@ -50,6 +56,7 @@
 .form-control input,
 .form-control textarea {
   font-size: var(--fs-mid-small-text);
+  background-color: var(--main-bg-color);
 }
 
 .form-control input,
@@ -57,7 +64,7 @@
 .form-control select {
   padding: 0.5rem;
   border-radius: 4px;
-  border: 1px solid #ccc;
+  border: 2px solid #ccc;
   width: 100%;
 }
 
@@ -73,8 +80,7 @@
 .form-control input:focus,
 .form-control textarea:focus {
   outline: none;
-  border-color: #240370;
-  background-color: #e0d4fd;
+  border-color: var(--sec-brown-color);
 }
 
 .invalid input,
@@ -96,21 +102,28 @@
 
 .form-actions {
   text-align: right;
-  width: 75%;
+  width: 100%;
+  height: 11%;
+  margin-top: 4rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: violet; */
 }
 
-.form-actions button {
+.form-actions .btn {
   /* margin-left: 1rem; */
-
+  display: inline-block;
   font-size: var(--fs-mid-small-text);
   padding: 0.5rem 0;
+  /* margin: 4rem 0; */
   cursor: pointer;
 
   border-radius: 1.2rem;
   border: none;
-  width: 100%;
-
-  margin-top: 4rem;
+  height: 55%;
+  width: 80%;
 
   color: #f3f3f3;
   background-color: var(--sec-brown-color);
