--- a/components/cocktails/CocktailsDrinkPrev.module.css
+++ b/components/cocktails/CocktailsDrinkPrev.module.css
@@ -38,9 +38,12 @@
 
   width: 100%;
 
+  font-weight: 600;
+  color: var(--main-brown-color);
+  font-family: var(--ff-sec);
   text-align: center;
-  padding: 1rem 0;
-  background-color: whitesmoke;
+  padding: 1.5rem 0;
+  background-color: var(--main-bg-color);
 
   bottom: 0%;
   left: 0%;
