--- a/components/main/MainSliderCocktails.module.css
+++ b/components/main/MainSliderCocktails.module.css
@@ -1,6 +1,6 @@
 .section-slider-cocktails {
   height: 88vh;
-  padding: 0 12rem;
+  padding: 0 10%;
 
   background-color: var(--sec-bg-color);
 }
@@ -11,6 +11,7 @@
   color: var(--main-brown-color);
   font-weight: 500;
   padding-top: 3rem;
+  text-align: center;
 
   display: flex;
   justify-content: center;
@@ -29,6 +30,11 @@
 
   border-radius: 1.2rem;
   display: flex;
+  overflow: hidden;
+
+  background-color: var(--main-bg-color);
+
+  background-color: yellowgreen;
 }
 
 .my-swiper--slide .container-img {
@@ -36,7 +42,7 @@
   height: 100%;
 
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 }
 
@@ -46,7 +52,8 @@
 
 .my-swiper--slide .container-text {
   width: 60%;
-  padding: 0 4rem;
+  padding: 0 7%;
+  /* padding: 0 4rem; */
 
   display: flex;
   justify-content: center;
@@ -55,6 +62,7 @@
   gap: 1.5rem;
 
   background-color: var(--main-bg-color);
+  /* background-color: yellowgreen; */
 }
 .my-swiper--slide .container-text h3 {
   font-size: var(--fs-big-text);
@@ -77,6 +85,29 @@
   padding-bottom: 0.2rem;
 }
 
+.my-swiper--slide .container-text button {
+  display: none;
+  width: 12rem;
+
+  font-family: Lora;
+  color: var(--black-color);
+
+  font-size: 1.6rem;
+  padding: 1rem 1.5rem;
+  border-radius: 1.2rem;
+  background-color: transparent;
+  cursor: pointer;
+  border: 2px solid var(--black-color);
+
+  transition: all 0.3s ease-out;
+}
+
+.my-swiper--slide .container-text button:hover {
+  color: var(--main-bg-color);
+  background-color: var(--black-color);
+  border: 2px solid var(--black-color);
+}
+
 .mybullet {
   width: 1.5rem;
   height: 1.5rem;
@@ -87,17 +118,84 @@
   background: var(--main-brown-color);
 }
 
-/**************************/
+/* *************************/
 /* BELOW 940px /  tablets */
 /**************************/
-/* @media (max-width: 59em) {
+@media (max-width: 59em) {
+  .section-slider-cocktails {
+    padding: 0 7.5%;
+  }
   .my-swiper .my-swiper--slide {
+    /* background-color: yellowgreen; */
     flex-direction: column;
     width: 100%;
   }
 
   .my-swiper--slide .container-img {
-    height: 40%;
     width: 100%;
+    height: 45%;
+    /* background-color: violet; */
   }
-} */
+  .my-swiper--slide .container-img img {
+    width: 100%;
+    height: auto;
+  }
+
+  .my-swiper--slide .container-text {
+    width: 100%;
+    height: 55%;
+  }
+}
+
+/**************************/
+/* BELOW 700px /  smaller tablets */
+/**************************/
+@media (max-width: 44em) {
+  .my-swiper--slide .container-img {
+    width: 100%;
+    height: 60%;
+
+    /* background-color: violet; */
+  }
+
+  .my-swiper--slide .container-img img {
+    width: 100%;
+    height: auto;
+  }
+
+  .my-swiper--slide .container-text {
+    height: 40%;
+    text-align: center;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10%;
+    padding-bottom: 10%;
+  }
+
+  .my-swiper--slide .container-text h4,
+  .my-swiper--slide .container-text ul,
+  .my-swiper--slide .container-text ol {
+    display: none;
+  }
+
+  .my-swiper--slide .container-text button {
+    display: inline;
+  }
+
+  .mybullet {
+    width: 2rem;
+    height: 2rem;
+  }
+}
+
+/**************************/
+/* BELOW 544px /  phones */
+/**************************/
+@media (max-width: 34em) {
+  .my-swiper--slide .container-img img {
+    height: 100%;
+    width: auto;
+  }
+}
