--- a/components/main/MainSpecialCollections.module.css
+++ b/components/main/MainSpecialCollections.module.css
@@ -1,12 +1,14 @@
 .section-special-collections {
   height: 70vh;
-  padding: 7.5rem 0;
+  /* padding: 7.5rem 0; */
+  padding: 0 5%;
 
   display: flex;
   justify-content: center;
   align-items: center;
 
   background-color: var(--main-bg-color);
+  /* background-color: yellowgreen; */
 }
 
 .section-special-collections .left {
@@ -18,6 +20,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+
+  /* background-color: aquamarine; */
 
   /* background-color: violet; */
 }
@@ -59,6 +63,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  /* background-color: violet; */
 }
 
 .section-special-collections .right img {
@@ -72,11 +77,15 @@
 @media (max-width: 59em) {
   .section-special-collections {
     flex-direction: column-reverse;
+    gap: 5%;
+    /* height: 88vh; */
   }
 
   .section-special-collections .left {
     padding-left: 0%;
     align-items: center;
+    width: 90%;
+    height: auto;
   }
 
   .section-special-collections .left h2 {
@@ -85,6 +94,21 @@
 
   .section-special-collections .right {
     padding-left: 0%;
+    width: 70%;
+    height: auto;
+  }
+}
+
+/**************************/
+/* BELOW 700px /  smaller tablets */
+/**************************/
+@media (max-width: 44em) {
+  .section-special-collections .left {
+    width: 90%;
+  }
+
+  .section-special-collections .right {
+    width: 80%;
   }
 }
 
