--- a/components/about/AboutHistory.module.css
+++ b/components/about/AboutHistory.module.css
@@ -4,7 +4,7 @@
 
   background-image: url("../../public/static/images/Reserva_Ancestral_Persona.png");
   background-repeat: no-repeat;
-  background-position: right bottom;
+  background-position: center;
   background-size: cover;
 }
 
@@ -38,4 +38,72 @@
 
   position: absolute;
   bottom: 10%;
+}
+
+/**************************/
+/* BELOW 940px /  tablets */
+/**************************/
+@media (max-width: 59em) {
+  .header h2 {
+    color: var(--main-bg-color);
+    font-size: var(--fs-title);
+
+    position: absolute;
+    top: 30%;
+    right: 5%;
+  }
+
+  .header p {
+    width: 60%;
+    line-height: 1.7;
+    position: absolute;
+    bottom: 15%;
+    left: 5%;
+  }
+
+  .header hr {
+    width: 40%;
+    height: 0.25rem;
+  }
+}
+
+/**************************/
+/* BELOW 544px /  phones */
+/**************************/
+@media (max-width: 34em) {
+  .header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .header h2 {
+    text-align: center;
+    color: var(--main-bg-color);
+    font-size: var(--fs-title);
+    padding-bottom: 7.5%;
+    width: 80%;
+
+    top: 0%;
+    right: 0%;
+    position: relative;
+    /* background-color: yellowgreen; */
+  }
+
+  .header p {
+    width: 75%;
+    padding-bottom: 10%;
+    line-height: 1.9;
+    text-align: center;
+
+    bottom: 0%;
+    left: 0%;
+    position: relative;
+  }
+
+  .header hr {
+    width: 40%;
+    bottom: 0%;
+    position: relative;
+  }
 }
