--- a/components/about/AboutVoice.module.css
+++ b/components/about/AboutVoice.module.css
@@ -4,7 +4,7 @@
 
   background-image: url("../../public/static/images/Reserva_Ancestral_Persona_2.png");
   background-repeat: no-repeat;
-  background-position: right bottom;
+  background-position: left bottom;
   background-size: cover;
 }
 
@@ -40,4 +40,59 @@
 
   border: none;
   background-color: var(--sec-brown-color);
+}
+
+/**************************/
+/* BELOW 940px /  tablets */
+/**************************/
+@media (max-width: 59em) {
+  .header p {
+    line-height: 1.7;
+    width: 60%;
+  }
+
+  .header hr {
+    width: 40%;
+  }
+}
+
+/**************************/
+/* BELOW 544px /  phones */
+/**************************/
+@media (max-width: 34em) {
+  .header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .header h2 {
+    position: relative;
+    bottom: 0%;
+    left: 0%;
+
+    padding-bottom: 7.5%;
+  }
+
+  .header p {
+    line-height: 1.9;
+    text-align: center;
+
+    width: 75%;
+    position: relative;
+    top: 0%;
+    right: 0%;
+
+    padding-bottom: 10%;
+  }
+
+  .header hr {
+    width: 40%;
+    height: 0.25rem;
+
+    position: relative;
+    right: 0;
+    top: 0%;
+  }
 }
