--- a/components/family/FamillyBottlePrev.module.css
+++ b/components/family/FamillyBottlePrev.module.css
@@ -144,3 +144,55 @@
   height: 85%;
   filter: drop-shadow(0px 40px 60px rgba(0, 0, 0, 0.15));
 }
+
+/**************************/
+/* BELOW 940px /  tablets */
+/**************************/
+@media (max-width: 59em) {
+  .bottle-prev {
+    padding: 0 7.5%;
+  }
+
+  .bottle-prev .container-img img {
+    /* height: 70%; */
+    width: 100%;
+    height: auto;
+  }
+}
+
+/**************************/
+/* BELOW 700px /  smaller tablets */
+/**************************/
+@media (max-width: 44em) {
+  .bottle-prev {
+    padding: 0 7.5%;
+
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .bottle-prev:nth-child(even) {
+    flex-direction: column-reverse;
+  }
+
+  .bottle-prev .container-text {
+    height: 35%;
+    width: 100%;
+  }
+
+  .bottle-prev .container-img {
+    height: 65%;
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+
+    padding-right: 7.5%;
+  }
+
+  .bottle-prev .container-img img {
+    height: 80%;
+    width: auto;
+  }
+}
