--- a/components/cocktails/CocktailsAllDrinks.module.css
+++ b/components/cocktails/CocktailsAllDrinks.module.css
@@ -20,15 +20,34 @@
 
 .section-all-drinks {
   margin: 0 auto;
-  width: 80%;
+  width: 85%;
   display: flex;
   justify-content: center;
 
-  padding: 0 10rem;
+  /* padding: 0 10rem; */
   margin-bottom: 5rem;
-  gap: 5rem;
+  gap: 5%;
 
   flex-wrap: wrap;
 
   /* background-color: violet; */
+}
+
+/**************************/
+/* BELOW 1200px /landscape tablets */
+/**************************/
+@media (max-width: 75em) {
+  /* .section-all-drinks {
+    width: 90%;
+  } */
+}
+
+/**************************/
+/* BELOW 700px /  smaller tablets */
+/**************************/
+@media (max-width: 44em) {
+  .section-all-drinks {
+    flex-direction: column;
+    align-items: center;
+  }
 }
